<resources>
    <string name="app_name">Clean Architecture Note App With Firebase</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="update_note">Update Note</string>
    <string name="addNote">Add Note</string>
    <string name="updateNote">update Note</string>
    <string name="add_new_note">add new note</string>
    <string name="design">Design</string>
    <string name="registration">Registration</string>
    <string name="note_taking_app_where_you_save_words">Note taking app where you save words</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="job_title">Job Title</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="haven_t_registered_yet">Haven’t registered yet?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="logout_fab_image_description">logout fab image description</string>
    <string name="cancel_uploaded_image">cancel uploaded image</string>
    <string name="uploaded_image">uploaded image</string>
    <string name="upload_image">Upload Image</string>
    <string name="no_images_yet">No Images Yet</string>
    <string name="upload_images">Upload Images</string>
</resources>